<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:id="@+id/home_chat_layout_parent"
    tools:context=".features.chat.ChatHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chat_home__layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/chats"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/not_connected_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_are_not_connected"
            android:textSize="18sp"
            android:padding="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_chats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_have_not_started_a_conversation_yet"
            android:textSize="18sp"
            android:padding="16dp"
            android:visibility="gone" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_chat_home"
            android:name="com.github.ybecker.epforuml.chat.ChatHomeFragment"
            android:layout_width="match_parent"
            android:layout_height="538dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".features.chat.ChatHomeFragment"
            tools:listitem="@layout/chat_home_item" />



    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:id="@+id/newChatWith"
        android:layout_gravity="end|bottom"
        android:src="@drawable/new_chat_circle"
        android:backgroundTint="@color/fui_transparent"
        />


</FrameLayout>





