<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonChatWith"
        android:layout_gravity="center"
        app:cardUseCompatPadding="true"
        android:clickable="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePicture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/nav_account"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"/>

            <TextView
                android:id="@+id/whoToChatWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/chat_with_me"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>