<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:id="@+id/real_chat_layout_parent"
    tools:context=".features.chat.RealChatFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chat_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:src="@drawable/back_arrow"
                android:backgroundTint="@color/dark"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:id="@+id/back_to_home_button"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/title_chat"
                    android:text= "@string/chat"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="45dp"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/not_connected_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_are_not_connected"
            android:textSize="18sp"
            android:padding="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/not_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/User_not_found"
            android:textSize="18sp"
            android:padding="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_chats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_have_not_started_a_conversation_yet"
            android:textSize="18sp"
            android:padding="16dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_chat"
            android:name="com.github.ybecker.epforuml.chat.RealChatFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            app:layoutManager="LinearLayoutManager"
            tools:context=".features.chat.RealChatFragment"
            tools:listitem="@layout/chat_item"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardUseCompatPadding="true"
                    android:id="@+id/write_reply_card"
                    app:cardCornerRadius="3dp"
                    android:visibility="visible"
                    app:cardElevation="5dp"
                    android:paddingVertical="5dp"
                    android:layout_weight="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_weight="2">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/edit_text_message"
                            android:hint="@string/write_an_answer"
                            android:layout_gravity="center"
                            android:background="@color/fui_transparent"
                            android:textColorHint="@color/courseColor"
                            android:textSize="20sp"
                            android:layout_weight="2"
                            android:paddingStart="15dp"
                            android:layout_margin="8dp"
                            android:paddingEnd="5dp"
                            android:autofillHints="@string/write_a_message"
                            android:inputType="text">

                        </EditText>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:id="@+id/send_text"
                    android:clickable="true"
                    android:visibility="visible"
                    android:layout_gravity="center"
                    android:src="@drawable/send_icon"
                    android:background="@drawable/round_corner"
                    app:tint="@color/white"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/send" />

            </LinearLayout>

        </LinearLayout>

</FrameLayout>